// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process Rich Text content correctly Process generated richtext node correctly Correctly creates a new ContentfulRichText node 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "id": "uuid-from-gatsby",
      "internal": Object {
        "content": "
        {
          nodeType: 'document',
          data: {},
          content: [
            {
              nodeType: 'paragraph',
              data: {},
              content: [
                {
                  nodeType: 'text',
                  value: 'Hello world!',
                  marks: [],
                  data: {}
                },
              ],
            },
          ],
        }
      ",
        "contentDigest": "3856def316184faeb790f3155e810e42",
        "type": "ContentfulRichText",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process Rich Text content correctly Process generated richtext node correctly Correctly creates a new ContentfulRichText node 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "id": "uuid-from-gatsby",
        "internal": Object {
          "content": "
        {
          nodeType: 'document',
          data: {},
          content: [
            {
              nodeType: 'paragraph',
              data: {},
              content: [
                {
                  nodeType: 'text',
                  value: 'Hello world!',
                  marks: [],
                  data: {}
                },
              ],
            },
          ],
        }
      ",
          "contentDigest": "3856def316184faeb790f3155e810e42",
          "type": "ContentfulRichText",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "
        {
          nodeType: 'document',
          data: {},
          content: [
            {
              nodeType: 'paragraph',
              data: {},
              content: [
                {
                  nodeType: 'text',
                  value: 'Hello world!',
                  marks: [],
                  data: {}
                },
              ],
            },
          ],
        }
      ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/richtext",
        },
      },
    },
  ],
]
`;
